k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nestjs-demo-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  -  host: kubernetes.docker.internal
     http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: demo-svc
            port:
              number: 8000
